--- a/index.html
+++ b/index.html
@@ -18,10 +18,10 @@
         <span class="bar"></span>
       </button>
       <ul class="navbar-list">
-        <a href="#welcome-section">ABOUT</a>
-        <a href="#skills">SKILLS</a>
-        <a href="#projects">PROJECTS</a>
-        <a href="#contact">CONTACT</a>
+        <a class="navbar-link" href="#welcome-section">ABOUT</a>
+        <a class="navbar-link" href="#skills">SKILLS</a>
+        <a class="navbar-link" href="#projects">PROJECTS</a>
+        <a class="navbar-link" href="#contact">CONTACT</a>
       </ul>
     </nav>
     <section id="welcome-section">
@@ -51,14 +51,17 @@
               </div>
             </div>
             <div class="skill-text-section">
-              <h2>Front-end</h2>
-              <p>
-                I've worked with <span>HTML</span>, <span>CSS</span>,
-                <span>Bootstrap</span>, <span>React</span>,
-                <span>Font Awesome</span>, <span>ChartJS</span> and other
-                technologies. I've created both personal and certification
-                projects using all these tools. I've also created my own
-                Bootstrap-like library using only CSS.
+              <h2 class="skill-text-section-heading">Front-end</h2>
+              <p class="skill-text-section-content">
+                I've worked with <span class="skill">HTML</span>,
+                <span class="skill">CSS</span>,
+                <span class="skill">Bootstrap</span>,
+                <span class="skill">React</span>,
+                <span class="skill">Font Awesome</span>,
+                <span class="skill">ChartJS</span> and other technologies. I've
+                created both personal and certification projects using all these
+                tools. I've also created my own Bootstrap-like library using
+                only CSS.
               </p>
             </div>
           </div>
@@ -69,12 +72,12 @@
               </div>
             </div>
             <div class="skill-text-section">
-              <h2>Back-end</h2>
-              <p>
-                I've done projects in <span>Python</span>,
-                <span>Django</span> and <span>DRF</span> and use these to make
-                apps like the Expense Tracker, Motivation Vault and Media
-                Ratings.
+              <h2 class="skill-text-section-heading">Back-end</h2>
+              <p class="skill-text-section-content">
+                I've done projects in <span class="skill">Python</span>,
+                <span class="skill">Django</span> and
+                <span class="skill">DRF</span> and use these to make apps like
+                the Expense Tracker, Motivation Vault and Media Ratings.
               </p>
             </div>
           </div>
@@ -85,16 +88,17 @@
               </div>
             </div>
             <div class="skill-text-section">
-              <h2>Tests</h2>
-              <p>
+              <h2 class="skill-text-section-heading">Tests</h2>
+              <p class="skill-text-section-content">
                 My software developement journey began with testing. I have
                 years of experience as QA of a variety of applications whether
                 web pages, web applications and video games. I have also
                 extensive experience on creating test suites for web pages and
                 web applications, automating testing processes and creating
                 function, UI, API, and Visual tests. For this I currently use
-                <span>JS</span>, <span>Cypress</span> and
-                <span>Cypress Image Snapshot</span>.
+                <span class="skill">JS</span>,
+                <span class="skill">Cypress</span> and
+                <span class="skill">Cypress Image Snapshot</span>.
               </p>
             </div>
           </div>
