--- a/react-portfolio/public/index.html
+++ b/react-portfolio/public/index.html
@@ -27,9 +27,10 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Fira+Code:wght@300&family=Montserrat:wght@400;600&family=Roboto:wght@300&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Fira+Code:wght@300&family=Montserrat:wght@400;600&family=Roboto:wght@300&display=swap&family=Permanent+Marker&display=swap"
       rel="stylesheet"
     />
+
     <title>React App</title>
   </head>
   <body>
