--- a/react-portfolio/public/index.html
+++ b/react-portfolio/public/index.html
@@ -27,7 +27,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Fira+Code:wght@300&family=Montserrat:wght@400;600&family=Roboto:wght@300&display=swap&family=Permanent+Marker&display=swap&family=Crete+Round:ital@1"
+      href="https://fonts.googleapis.com/css2?family=Fira+Code:wght@300&family=Montserrat:wght@400;600&family=Roboto:wght@300&display=swap&family=Permanent+Marker&display=swap&family=Crete+Round&display=swap"
       rel="stylesheet"
     />
 
